--- a/src/main/resources/templates/fragments/beneficio/beneficiosreport.html
+++ b/src/main/resources/templates/fragments/beneficio/beneficiosreport.html
@@ -17,17 +17,17 @@
                     <div class="form-group">
                         <label class="col-sm-3 control-label" >Codigo de empleado:</label>
                         <div class="col-sm-8">
-                            <input type="text" class="form-control" id="codigo"/>
+                            <input type="text" class="form-control" id="codigo" name="codigo"/>
                         </div>
                     </div>
                      <div class="form-group">    
                         <label class="col-sm-3 control-label">Fecha Inicial:</label>
                         <div class="col-sm-3">
-                            <input type="text" class="form-control" id="fechainicial"/>
+                            <input type="text" class="form-control" id="fechainicial" name="fechainicial"/>
                         </div>
                         <label class="col-sm-2 control-label">Fecha Final:</label>
                         <div class="col-sm-3">
-                            <input type="text" class="form-control" id="fechafinal"/>
+                            <input type="text" class="form-control" id="fechafinal" name="fechafinal"/>
                         </div>
                     </div>
                      <div class="form-group">    
