--- a/src/main/webapp/WEB-INF/reports/beneficios/rpt_beneficios.jrxml
+++ b/src/main/webapp/WEB-INF/reports/beneficios/rpt_beneficios.jrxml
@@ -3,11 +3,23 @@
 	<property name="ireport.zoom" value="1.0"/>
 	<property name="ireport.x" value="0"/>
 	<property name="ireport.y" value="0"/>
+	<parameter name="CODIGO" class="java.lang.String">
+		<defaultValueExpression><![CDATA[]]></defaultValueExpression>
+	</parameter>
+	<parameter name="FECHAINICIO" class="java.lang.String">
+		<defaultValueExpression><![CDATA[]]></defaultValueExpression>
+	</parameter>
+	<parameter name="FECHAFIN" class="java.lang.String">
+		<defaultValueExpression><![CDATA[]]></defaultValueExpression>
+	</parameter>
 	<queryString>
 		<![CDATA[select * from empleadobeneficio empben
 inner join empleado using(codigoempleado)
 inner join beneficio using (codigobeneficio)
-where empben.codigoempleado =1]]>
+where empben.codigoempleado =$P{CODIGO}
+and
+empben.fechabeneficio between
+$P{FECHAINICIO} and $P{FECHAFIN}]]>
 	</queryString>
 	<field name="CODIGOBENEFICIO" class="java.lang.Integer">
 		<fieldDescription><![CDATA[]]></fieldDescription>
@@ -117,14 +129,15 @@ where empben.codigoempleado =1]]>
 	<title>
 		<band height="74" splitType="Stretch">
 			<staticText>
-				<reportElement x="43" y="0" width="475" height="30" uuid="49fdfec4-dd74-4ef1-a05d-943f225b8baa"/>
+				<reportElement uuid="49fdfec4-dd74-4ef1-a05d-943f225b8baa" x="43" y="0" width="475" height="30"/>
 				<textElement>
 					<font size="16" isBold="true"/>
 				</textElement>
 				<text><![CDATA[MINISTERIO DE JUSTICIA Y SEGURIDAD PUBLICA]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="150" y="30" width="297" height="20" uuid="191dad33-aeab-4a34-8a51-89e2d9426ef0"/>
+				<reportElement uuid="191dad33-aeab-4a34-8a51-89e2d9426ef0" x="150" y="30" width="297" height="20"/>
+				<textElement/>
 				<text><![CDATA[REPORTE DE BENEFIICIOS DE EMPLEADOS]]></text>
 			</staticText>
 		</band>
@@ -135,35 +148,35 @@ where empben.codigoempleado =1]]>
 	<columnHeader>
 		<band height="61" splitType="Stretch">
 			<staticText>
-				<reportElement x="200" y="20" width="100" height="20" uuid="21013ac3-83d2-48e0-8663-b651fa613ff0"/>
+				<reportElement uuid="21013ac3-83d2-48e0-8663-b651fa613ff0" x="200" y="20" width="100" height="20"/>
 				<textElement>
 					<font isUnderline="true"/>
 				</textElement>
 				<text><![CDATA[NOMBREEMPLEADO]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="100" y="20" width="100" height="20" uuid="7e076150-d156-4236-aee8-35b1156f7138"/>
+				<reportElement uuid="7e076150-d156-4236-aee8-35b1156f7138" x="100" y="20" width="100" height="20"/>
 				<textElement>
 					<font isUnderline="true"/>
 				</textElement>
 				<text><![CDATA[NOMBREBENEFICIO]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="332" y="20" width="223" height="20" uuid="04190aba-1eb9-4136-b324-34ffd66d26d0"/>
+				<reportElement uuid="04190aba-1eb9-4136-b324-34ffd66d26d0" x="332" y="20" width="223" height="20"/>
 				<textElement>
 					<font isUnderline="true"/>
 				</textElement>
 				<text><![CDATA[DESCRIPCIONBENEFICIO]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="300" y="20" width="32" height="20" uuid="2b1920bb-54aa-4296-bdc2-bce9dc33b72e"/>
+				<reportElement uuid="2b1920bb-54aa-4296-bdc2-bce9dc33b72e" x="300" y="20" width="32" height="20"/>
 				<textElement>
 					<font isUnderline="true"/>
 				</textElement>
 				<text><![CDATA[SEXOEMPLEADO]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="0" y="20" width="100" height="20" uuid="6f34145f-662c-4029-a33d-eae35bf8451a"/>
+				<reportElement uuid="6f34145f-662c-4029-a33d-eae35bf8451a" x="0" y="20" width="100" height="20"/>
 				<textElement>
 					<font isUnderline="true"/>
 				</textElement>
@@ -174,23 +187,28 @@ where empben.codigoempleado =1]]>
 	<detail>
 		<band height="125" splitType="Stretch">
 			<textField>
-				<reportElement x="200" y="9" width="100" height="20" uuid="9fec0fb1-2899-468a-8a91-8fb33d210e06"/>
+				<reportElement uuid="9fec0fb1-2899-468a-8a91-8fb33d210e06" x="200" y="9" width="100" height="20"/>
+				<textElement/>
 				<textFieldExpression><![CDATA[$F{NOMBREEMPLEADO}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="100" y="9" width="100" height="20" uuid="88f23bdb-c0c4-45f2-bd68-ce83e3bd3e94"/>
+				<reportElement uuid="88f23bdb-c0c4-45f2-bd68-ce83e3bd3e94" x="100" y="9" width="100" height="20"/>
+				<textElement/>
 				<textFieldExpression><![CDATA[$F{NOMBREBENEFICIO}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="332" y="9" width="223" height="20" uuid="6563e988-c80a-43ca-b053-77d70abfbccd"/>
+				<reportElement uuid="6563e988-c80a-43ca-b053-77d70abfbccd" x="332" y="9" width="223" height="20"/>
+				<textElement/>
 				<textFieldExpression><![CDATA[$F{DESCRIPCIONBENEFICIO}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="300" y="9" width="32" height="20" uuid="1636ecd0-befe-49b1-80bf-86bf97f69f88"/>
+				<reportElement uuid="1636ecd0-befe-49b1-80bf-86bf97f69f88" x="300" y="9" width="32" height="20"/>
+				<textElement/>
 				<textFieldExpression><![CDATA[$F{SEXOEMPLEADO}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="0" y="9" width="100" height="20" uuid="130ffff8-42de-42d6-a057-efc5b2dd59cf"/>
+				<reportElement uuid="130ffff8-42de-42d6-a057-efc5b2dd59cf" x="0" y="9" width="100" height="20"/>
+				<textElement/>
 				<textFieldExpression><![CDATA[$F{CODIGOBENEFICIO}]]></textFieldExpression>
 			</textField>
 		</band>
