--- a/src/main/resources/templates/fragments/puesto/puestoreporte.html
+++ b/src/main/resources/templates/fragments/puesto/puestoreporte.html
@@ -24,22 +24,22 @@
     <h3 align="center">Generar Reporte de Puestos a Caducar</h3>
     <br><br><br>
     
-        <form class="form-horizontal"   th:object="${puesto}"  th:action="@{../puesto}" method="post">
+        <form class="form-horizontal"  id="fromreportpuesto" > 
           
            <!--<div class="col-md-6">-->
          
             <div class="form-group">
-                <label class="col-sm-6 control-label">Fecha Desde(*):</label>
-                <div class="col-sm-2">
+                <label class="col-sm-5 control-label">Fecha Desde(*):</label>
+                <div class="col-sm-4">
                     <!--<input type="text" class="form-control" th:field="*{ubicacionpuesto}"/>-->
-                     <input class="form-control" type="text" th:field="*{fechacontrataciondesde}" name="fechacontrataciondesde" id="fechacontrataciondesde"  />
+                     <input class="form-control" type="text"  name="fechacontrataciondesde" id="fechacontrataciondesde"  />
                 </div>
             </div>
             <div class="form-group">
-                <label class="col-sm-6 control-label">Fecha Hasta(*):</label>
-                <div class="col-sm-2">
+                <label class="col-sm-5 control-label">Fecha Hasta(*):</label>
+                <div class="col-sm-4">
                     <!--<input type="text" class="form-control" th:field="*{ubicacionpuesto}"/>-->
-                     <input class="form-control" type="text" th:field="*{fechacontratacionhasta}" name="fechacontratacionhasta" id="fechacontratacionhasta"  />
+                     <input class="form-control" type="text"  name="fechacontratacionhasta" id="fechacontratacionhasta"  />
                 </div>
             </div>
            
@@ -49,12 +49,14 @@
 
 
           
-        </form>
+        <div class="col-md-12">
       <div class="row" align="center">
-                <button type="submit" class="btn btn-default"><a href="#" th:href="@{/puestos/}">Regresar</a></button>
-                <button type="submit" class="btn btn-default">Consultar</button>
-                <button type="submit" class="btn btn-default">Limpiar</button>
+                <button type="button" class="btn btn-default"><a href="#" th:href="@{/puestos/}">Regresar</a></button>
+                <button  class="btn btn-default"  id="generar">Consultar</button>
+                <button type="reset" class="btn btn-default">Limpiar</button>
             </div>
+            </div>
+           </form>
     </div>
 
       <div class="col-md-12">
@@ -66,6 +68,7 @@
        
 </body>
 <script src="../static/css/hydro/js/jquery.js"></script>
+<script src="../static/css/stylemenu.js"></script>
 	        
     <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
 	<script>
@@ -95,8 +98,31 @@
 		        dateFormat: 'yy-mm-dd'
 		    });
                     
+                    $('#generar').click(function(){
+            $("#fromreportpuesto").attr('action', '../pdf/'+ $("#fechacontrataciondesde").val().toString()+ $("#fechacontratacionhasta").val().toString());
+            $("form#fromreportpuesto").submit();
+            
+        });
+                    
 		});
 	</script>
+        
+<!--        <script>
+    $(document).ready(function () {
+        $('#fechainicial').datepicker({
+            dateFormat: 'yy-mm-dd'
+        });
+
+        $('#fechafinal').datepicker({
+            dateFormat: 'yy-mm-dd'
+        });
+        $('#generar').click(function(){
+            $("#fromreportpuesto").attr('action', '../pdf/'+ $("#fechacontrataciondesde").val().toString()+ $("#fechacontratacionhasta").val().toString());
+            $("form#fromreportpuesto").submit();
+            
+        });
+    });
+</script>-->
         
         
 </html>
