--- a/src/main/resources/templates/fragments/asistenciacapacitacion/asistenciacapacitaciones.html
+++ b/src/main/resources/templates/fragments/asistenciacapacitacion/asistenciacapacitaciones.html
@@ -15,6 +15,9 @@
                     <th>Horas Recibidas</th>
                     <th>Ubicacion Asistentes Capacitacion</th>
                     <th>Capacitacion</th>
+                     <th>Telefono</th>
+                      <th>Correo</th>
+                    
                     <th>Acciones</th>
 
                 </tr>
@@ -23,6 +26,8 @@
                     <td th:text="${asistenciacapacitacion.horasrecibidas}">Horas Recibidas</td>
                     <td th:text="${asistenciacapacitacion.ubicacionasistenciacapacitacion}">Ubicacion de Capacitacion</td>
                     <td th:text="${asistenciacapacitacion.codigocapacitacion.nombrecapacitacion}">Capacitacion</td>
+                      <td th:text="${asistenciacapacitacion.telefono}">Telefono</td>
+                        <td th:text="${asistenciacapacitacion.email}">Correo</td>
 
 
                     <td>
