--- a/src/main/resources/templates/fragments/asistenciacapacitacion/asistenciacapacitacionform.html
+++ b/src/main/resources/templates/fragments/asistenciacapacitacion/asistenciacapacitacionform.html
@@ -1,79 +1,122 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-  
-<head lang="en">
 
-    <title>Nueva Asistencia Capacitacion</title>
-  <th:block th:include="../templates/header"></th:block>
-  </head>
+    <head lang="en">
+
+        <title>Nueva Asistencia Capacitacion</title>
+    <th:block th:include="../templates/header"></th:block>
+</head>
 <body>
-<div class="row">
+    <div class="row">
         <div class="col-md-3">
-         <th:block th:include="../templates/menu"></th:block>
-    </div> 
+            <th:block th:include="../templates/menu"></th:block>
+        </div> 
         <div class="col-md-8">
-            
-          <h3 align="center">Nueva Asistencias de Capacitacion</h3>
-    <div>
-        <form class="form-horizontal" th:object="${asistenciacapacitacion}" th:action="@{../asistenciacapacitacion}" method="post">
-<!--          <input type="hidden" th:field="*{codigoasistenciacapacitacion}"/>-->
-            <!--  <input type="hidden" th:field="*{nombrecomite}"/>-->
-            
-            <div class="form-group">
-                <label class="col-sm-2 control-label ">Horas Recibidas:</label>
-                <div class="col-sm-10">
-                    <input type="text" class="form-control numeros" required="true" th:field="*{horasrecibidas}"/>
-                </div>
-            </div>
-           
-            
-            <div class="form-group">
-                <label class="col-sm-2 control-label">Ubicacion Fisica de las asistencias:</label>
-                <div class="col-sm-10">
-                    <input type="text" class="form-control" required="true" th:field="*{ubicacionasistenciacapacitacion}"/>
-                </div>
-            </div>
-            <div class="form-group">
-                <label class="col-sm-2 control-label">Codigo Capacitacion:</label>
-                <div class="col-sm-10">
-                    <input type="number" class="form-control" th:field="*{codigocapacitacion.codigocapacitacion}"/>
-                </div>
-            </div>
-             <div class="form-group">
-                <label class="col-sm-2 control-label">Responsable del Comite:</label>
-                                     <div class="col-sm-10">
-                                         <select class="form-control" th:field="*{codigocapacitacion.codigocapacitacion}" >
-                                <option th:each="c:${capacitaciones}" placeholder="Seleccionar capacitacion" th:value="${c.codigocapacitacion" th:text="${c.nombreempleado}"></option>
+
+            <h3 align="center">Nueva Asistencias de Capacitacion</h3>
+            <div>
+                <form class="form-horizontal" th:object="${asistenciacapacitacion}" th:action="@{../asistenciacapacitacion}" method="post">
+
+
+                    <div class="form-group">
+                        <label class="col-sm-2 control-label">Capacitacion:</label>
+                        <div class="col-sm-10" >
+                            <select class="form-control"  th:field="*{codigocapacitacion.codigocapacitacion}" >
+                                <option th:each="c:${capacitaciones}" th:value="${c.codigocapacitacion}" th:text="${c.nombrecapacitacion}"></option>
                             </select>
-               <!--<input type="number" class="form-control" th:field="*{codigoempleado.codigoempleado}"/>-->
-                                          </div>
-                                </div>
-            
-           
-            <div class="col-md-12">
-            <div class="row" align="center">
-                <button type="button" class="btn btn-default"><a href="#" th:href="@{/asistenciacapacitaciones/}">Regresar</a></button>
-                <button type="submit" class="btn btn-default">Guardar</button>
-                <button type="reset" class="btn btn-default">Limpiar</button>
+                            <!--<input type="text" class="form-control" onkeypress="return valida(event)" th:field="*{codigoempleado.codigoempleado}"/>-->
+                        </div>
+                    </div>
+
+
+
+                    <div class="form-group">
+                        <label class="col-sm-2 control-label ">Horas Recibidas:</label>
+                        <div class="col-sm-10">
+                            <input type="text" class="form-control numeros" required="true" th:field="*{horasrecibidas}"/>
+                        </div>
+                    </div>
+
+                    <!--             <div class="form-group">
+                         <label class="col-sm-2 control-label">Ubicacion:</label>
+                                              <div class="col-sm-10">
+                                                  <select class="form-control" th:field="*{codigocapacitacion.codigocapacitacion}" >
+                                         <option th:each="c:${capacitaciones}" placeholder="Seleccionar capacitacion" th:value="${c.codigocapacitacion" th:text="${c. nombrecapacitacion}"></option>
+                                     </select>
+                        <input type="number" class="form-control" th:field="*{codigoempleado.codigoempleado}"/>
+                                                   </div>
+                                         </div>-->
+
+
+                    <!--             <div class="form-group">
+                         <label class="col-sm-2 control-label">Cargo:</label>
+                                              <div class="col-sm-10">
+                                                  <select class="form-control" th:field="*{codigocapacitacion.codigocapacitacion}" >
+                                         <option th:each="c:${capacitaciones}" placeholder="Seleccionar capacitacion" th:value="${c.codigocapacitacion" th:text="${c. nombrecapacitacion}"></option>
+                                     </select>
+                        <input type="number" class="form-control" th:field="*{codigoempleado.codigoempleado}"/>
+                                                   </div>
+                                         </div>-->
+
+                    <!--             <div class="form-group">
+                        <label class="col-sm-2 control-label">Empleado:</label>
+                                             <div class="col-sm-10">
+                                                 <select class="form-control" th:field="*{codigocapacitacion.codigocapacitacion}" >
+                                        <option th:each="c:${capacitaciones}" placeholder="Seleccionar capacitacion" th:value="${c.codigocapacitacion" th:text="${c. nombrecapacitacion}"></option>
+                                    </select>
+                       <input type="number" class="form-control" th:field="*{codigoempleado.codigoempleado}"/>
+                                                  </div>
+                                        </div>-->
+                    <div class="form-group">
+                        <label class="col-sm-2 control-label ">Telefono:</label>
+                        <div class="col-sm-10">
+                            <input type="text" class="form-control num_telefono" required="true" th:field="*{telefono}"/>
+                        </div>
+                    </div>
+
+
+                    <div class="form-group">
+                        <label class="col-sm-2 control-label">Correo:</label>
+                        <div class="col-sm-10">
+                            <input type="email" class="form-control" required="true" th:field="*{email}"/>
+                        </div>
+                    </div>
+
+                    <!--             <div class="form-group">
+                                    <label class="col-sm-2 control-label">Responsable del Comite:</label>
+                                                         <div class="col-sm-10">
+                                                             <select class="form-control" th:field="*{codigocapacitacion.codigocapacitacion}" >
+                                                    <option th:each="c:${capacitaciones}" placeholder="Seleccionar capacitacion" th:value="${c.codigocapacitacion" th:text="${c. nombrecapacitacion}"></option>
+                                                </select>
+                                   <input type="number" class="form-control" th:field="*{codigoempleado.codigoempleado}"/>
+                                                              </div>
+                                                    </div>-->
+
+
+                    <div class="col-md-12">
+                        <div class="row" align="center">
+                            <button type="button" class="btn btn-default"><a href="#" th:href="@{/asistenciacapacitaciones/}">Regresar</a></button>
+                            <button type="submit" class="btn btn-default">Guardar</button>
+                            <button type="reset" class="btn btn-default">Limpiar</button>
+                        </div>
+                    </div>
+                </form>
             </div>
-    </div>
-        </form>
-    </div>
-  
+
         </div>
     </div>
-    
-<script>
-    $(document).ready(function () {
-        $('#fechadesdecomite').datepicker({
-            dateFormat: 'yy-mm-dd'
-        });
 
-        $('#fechahastacomite').datepicker({
-            dateFormat: 'yy-mm-dd'
+    <script>
+        $(document).ready(function () {
+            $('#fechadesdecomite').datepicker({
+                dateFormat: 'yy-mm-dd'
+            });
+
+            $('#fechahastacomite').datepicker({
+                dateFormat: 'yy-mm-dd'
+            });
         });
-    });
-</script>
+    </script>
 
 </body>	
 </html>
