--- a/src/main/resources/templates/fragments/asistenciacapacitacion/asistenciacapacitacionshow.html
+++ b/src/main/resources/templates/fragments/asistenciacapacitacion/asistenciacapacitacionshow.html
@@ -41,6 +41,18 @@
                                 <p class="form-control-static" th:text="${asistenciacapacitacion.codigocapacitacion.nombrecapacitacion}">Codigo de Capacitacion</p>
                             </div>
                         </div>
+                          <div class="form-group">
+                            <label class="col-sm-5 control-label">Telefono:</label>
+                            <div class="col-sm-7">
+                                <p class="form-control-static" th:text="${asistenciacapacitacion.telefono}">Codigo de Capacitacion</p>
+                                  <div class="form-group">
+                            <label class="col-sm-5 control-label">Correo:</label>
+                            <div class="col-sm-7">
+                                <p class="form-control-static" th:text="${asistenciacapacitacion.email}">Codigo de Capacitacion</p>
+                            </div>
+                        </div>
+                            </div>
+                        </div>
                         
                         
 
