--- a/src/main/resources/static/css/login.css
+++ b/src/main/resources/static/css/login.css
@@ -1,17 +1,17 @@
-@import "compass/css3";
-
+/*@import "compass/css3";
+*/
 * { box-sizing: border-box; }
 
 body {
 	font-family: "HelveticaNeue-Light","Helvetica Neue Light","Helvetica Neue",Helvetica,Arial,"Lucida Grande",sans-serif;
   color:whitesmoke;
   font-size:12px;
-  background:#333 url(/images/classy_fabric.png);
+  background:#333 /*url(/images/classy_fabric.png)*/;
 }
 
 form {
  	background:#111; 
-  width:300px;
+  width:600px;
   margin:30px auto;
   border-radius:0.4em;
   border:1px solid #191919;
@@ -148,6 +148,6 @@ label:hover ~ input[type=password] {
  	background:#27292c;
 }
 
-.col_der {float: right; width: 15%;}
-.col_izq {float: left; width: 15%;}
-.col_cen {float: left; width: 70%; text-align: center}
+.col_der {float: right; width: 20%; background-color: white; }
+.col_izq {float: left; width: 20%; background-color: white; padding: 2%}
+.col_cen {float: left; width: 60%; text-align: center; padding: 1%}
