--- a/src/main/resources/templates/loginPage.html
+++ b/src/main/resources/templates/loginPage.html
@@ -10,7 +10,7 @@
     <div class="row">
                    <div  class="col_izq" >
                          <div class="row text-center">
-                        <img src="../../static/image/gob.png" width="200" th:src="@{/image/gob.png}"/>
+                        <img src="../../static/image/gob.png" width="200" th:src="@{/image/GOES.jpg}"/>
                     </div>
                    </div>
                    <div class="col_cen">
@@ -23,17 +23,17 @@
                     </div>
                    </div>
                    <div class="col_der">
-                         <div class="row text-center">
-                        <img src="../../static/image/mjsp.png" width="200" th:src="@{/image/mjsp.png}"/>
+                         <div class="row text-center" align="center">
+                             <img src="../../static/image/mjsp.png" width="210" th:src="@{/image/LOGOMJ.jpg}" />
                     </div>
                    </div>
                 </div>
-    <div class="col-md-8">
-    <!-- /login?error=true -->
     
+    <!-- /login?error=true -->
+    <br>
 
     <form name='f' th:action="@{/j_spring_security_check}" method='POST'>
-        <h1>Introdusca nombre de usuario y contraseña:</h1>
+        <h2>Introdusca nombre de usuario y contraseña:</h1>
         <div class="inset">
             <p>
             <div th:if="${#request.getParameter('error') == 'true'}"
@@ -55,7 +55,7 @@
             </p>
             <p>
                 <input type="checkbox" name="remember" id="remember">
-                <label for="remember">Remember me for 14 days</label>
+                <label for="remember">Recordar mi usuario</label>
             </p>
         </div>
         <p class="p-container">
